--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ android {
             manifest.srcFile 'src/main/AndroidManifest.xml'
             jni.srcDirs = []
             jniLibs.srcDirs = ['src/main/libs']
+            jniLibs.srcDirs = ['libs']
         }
     }
 
@@ -142,8 +143,9 @@ dependencies {
 
     //轮播图
     implementation 'cn.bingoogolapple:bga-banner:2.2.4'
-    implementation 'com.youth.banner:banner:1.4.10'  //最新版本
+    implementation 'com.youth.banner:banner:1.4.10'
 
+    //最新版本
 
     //MVP架构
 
@@ -180,6 +182,7 @@ dependencies {
 
     //播放视频
     implementation 'com.shuyu:gsyVideoPlayer-java:6.0.1'
+
     //更多ijk的编码支持
     implementation 'com.shuyu:gsyVideoPlayer-ex_so:6.0.1'
 
@@ -189,17 +192,19 @@ dependencies {
     /*zking*/
     implementation 'com.android.support:multidex:1.0.1'
 
-    //    implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
+    //        implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
+
+    //    implementation 'com.getui:sdk:2.13.2.0'
 
     //zking
     implementation 'com.google.zxing:core:3.3.0'
 
     //加载样式
-    compile project(path: ':Loaddatalayout')
+    implementation project(path: ':Loaddatalayout')
 
     //点击加载框
-    compile project(path: ':ToprightmenuLibrary')
-    compile project(path: ':lrcview')
+    implementation project(path: ':ToprightmenuLibrary')
+    implementation project(path: ':lrcview')
 
     //    compile project(path: ':zxinglibrary')
     implementation(name: 'hiar', ext: 'aar')
@@ -211,4 +216,5 @@ dependencies {
     implementation files('libs/umeng-shareboard-widget-6.9.4.jar')
     implementation files('libs/umeng-sharetool-6.9.4.jar')
     implementation files('libs/umeng-analytics-8.0.0.jar')
+    implementation files('libs/GetuiSDK2.13.2.0.jar')
 }
