--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -28,6 +28,9 @@ allprojects {
         maven { url "https://dl.google.com/dl/android/maven2/"}
         maven { url "https://jitpack.io"}
         maven { url 'https://oss.jfrog.org/libs-snapshot' }
+        maven {
+            url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
+        }
     }
 
 }
@@ -41,7 +44,7 @@ ext {
     buildToolsVersion = '25.0.0'
     targetSdkVersion = 26
     minSdkVersion = 23
-    versionCode = 80
-    versionName = "1.0"
+    versionCode = 81
+    versionName = "2.0"
     supportVersion = '27.1.1'
 }
